--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,8 +1,38 @@
 /* Home.css */
+body {
+    background-image: url('https://r4.wallpaperflare.com/wallpaper/626/579/635/league-of-legends-old-school-heroes-hd-league-of-legends-characters-wallpaper-1910985d413afd4bb67768bf3031e65d.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh; /* Ensure the background covers the entire viewport height */
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+}
+
 h1 {
     text-align: center;
     font-size: 1.5rem;
     margin-bottom: 20px;
+}
+input {
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 5px;
+}
+
+#gamerName {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px; /* Add a margin to the gamerName section */
 }
 
 /* Center the label and filter */
@@ -40,6 +70,33 @@ button:hover {
     background-color: #383b44;
 }
 
+/* Container for REROLL and LOCK IN buttons */
+.button-container {
+    display: flex;
+    justify-content: space-around; /* Adjust as needed */
+    margin-top: 10px; /* Add space between buttons and the image */
+}
+
+/* Style for both REROLL and LOCK IN buttons */
+.button-container button {
+    width: 100%; /* Make the buttons match the width of the image */
+    padding: 10px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* Add a small gap between REROLL and LOCK IN buttons */
+.button-container button + button {
+    margin-left: 5px; /* Adjust as needed */
+}
+
+/* Hover effect for LOCK IN button */
+.button-container button:last-child:hover {
+    background-color: #6fa6d6; /* Adjust the color as needed */
+}
+
 .Champion-list {
     display: flex;
     flex-wrap: wrap;
@@ -52,6 +109,7 @@ button:hover {
 }
 
 .champion-item img {
+    width: 100%;
     max-width: 100%;
     height: auto;
     border-radius: 5px;
