--- a/src/home/Navbar.css
+++ b/src/home/Navbar.css
@@ -15,10 +15,14 @@
     border-radius: 5px;
     cursor: pointer;
     margin: 0.1em; /* Add a small margin between filters */
+    background-color: #2c303a; /* Subtle background color */
+    filter: brightness(70%); /* Darken the image by default */
 }
 
-.filter-button:hover {
-    background-color: #383b44;
+.filter-button:hover,
+.filter-button.active {
+    background-color: #717cff; /* Light color when hovered or active */
+    filter: brightness(100%); /* Reset brightness on hover or active */
 }
 
 /* Adjust the size of filters for smaller screens */
